Cambios en media queries

--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="dest/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="dest/main.css">
 </head>
+
 <body>
-    <header>Este es el sitio web y este es su header</header>
-    <aside>Barra lateral de contenidos</aside>
-    <div class="contenido">
-        <div class="jaja">
-            <p>jaime de greiff</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>jaime de greiff</p>
-            <p>jaime de greiff</p>
-            <p>jaime de greiff</p>
-        </div>
-        <div id="fullscreen">
-  <h1>Demostración :fullscreen</h1>
-  <p>Este texto se pondrá grande y rojo cuando el navegador esté en modo de pantalla completa.</p>
-  <button id="fullscreen-button">Entrar en pantalla completa</button>
-</div>
+  <header>Este es el sitio web y este es su header</header>
+  <aside>Barra lateral de contenidos</aside>
+  <div class="contenido">
+    <div class="jaja">
+      <p>jaime de greiff</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>jaime de greiff</p>
+      <p>jaime de greiff</p>
+      <p>jaime de greiff</p>
     </div>
-    <footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio illum error aut at sunt voluptatibus pariatur, dolore fuga tenetur accusantium reiciendis laboriosam quisquam facere id aliquam debitis porro ipsam ea!</footer>
-<p class="coda">Jaime Le Gris</p>
+
+  </div>
+  <footer>Este es el jajaja</footer>
+  <p class="coda">Jaime Le Gris</p>
 </body>
+
 </html>
